# clinical-trial-protocol-screener

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.loadtest.yml  docker-compose.observability.yml  docker-compose.yml  render.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  docker.yml  pr-title.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  exceptions.py  health.py  logging_config.py  main.py  persistence.py
backend/app/data/: generate_ehr.py  sample_protocol.md
backend/app/graph/: builder.py  state.py
backend/app/graph/nodes/: critic.py  matcher.py  parser.py  router.py
backend/app/rules/: compliance_rules.yaml
backend/app/schemas/: criteria.py  review.py
backend/app/services/: concurrency.py  llm.py  metrics.py  pdf.py  screening.py  sse.py  stub_llm.py  uploads.py
backend/evals/: README.md  __init__.py  run_parser_eval.py  sources.json
backend/evals/labels/: 01_nsclc_osimertinib.json  02_t2dm_cardio.json  03_hfref.json  04_ckd.json  05_hypertension.json  nct03521154_nsclc.json  nct06224153_ckd.json  nct06278844_hfref.json  nct07433192_t2dm.json
backend/evals/protocols/: 01_nsclc_osimertinib.txt  02_t2dm_cardio.txt  03_hfref.txt  04_ckd.txt  05_hypertension.txt  nct03521154_nsclc.txt  nct06224153_ckd.txt  nct06278844_hfref.txt  nct07433192_t2dm.txt
backend/tests/: conftest.py  fakes.py  test_api_errors.py  test_api_hardening.py  test_api_integration.py  test_concurrency.py  test_config.py  test_critic_rules.py  test_critic_semantic.py  test_edge_cases.py  test_error_handling.py  test_eval_scoring.py  test_frontend_mount.py  test_graph_integration.py  test_graph_logging.py  test_health.py  test_logging.py  test_logging_api.py  test_matcher.py  test_matcher_semantic.py  test_metrics.py  test_parser.py  test_persistence.py  test_rate_limiting.py  test_ready.py  test_screening_service.py  test_sse.py  test_stub_llm.py  test_uploads.py
deploy/demo/: Dockerfile
deploy/fly/: backend.toml  frontend.toml
deploy/huggingface/: Dockerfile  README.md
deploy/ollama/: Dockerfile  entrypoint.sh  fly.toml
docs/: deployment.md  free-demo-deploy.md  performance.md
frontend/: .dockerignore  15-detect-resolver.sh  Dockerfile  default.conf.template  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AgentCard.tsx  CriteriaTable.tsx  PatientMatchTable.tsx
frontend/src/hooks/: useScreenerStream.ts
loadtest/: README.md  locustfile.py
observability/: prometheus.yml
observability/grafana/dashboards/: screener-pipeline.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: prometheus.yml
sample_pdfs/: README.md
scripts/: make_sample_pdfs.py  smoke_test.sh
