[project]
name = "protocol-screener"
version = "0.1.0"
description = "Multi-agent clinical trial protocol screener (LangGraph + FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-anthropic>=0.3",
    "pydantic>=2.8",
    "pymupdf>=1.24",
    "pyyaml>=6.0",
    "faker>=28.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "pre-commit>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backend"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort import ordering
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear (likely bugs)
    "T20",  # no print statements
    "BLE",  # no blind excepts
]

[tool.ruff.lint.per-file-ignores]
# generate_ehr.py is a CLI script — printing its result is its job
"app/data/generate_ehr.py" = ["T201"]

[tool.mypy]
python_version = "3.11"
files = ["app", "tests"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

# LangChain/LangGraph and friends ship incomplete stubs
[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_ollama.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "pymupdf.*",
    "faker.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
