[project]
name = "protocol-screener"
version = "0.1.0"
description = "Multi-agent clinical trial protocol screener (LangGraph + FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-anthropic>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pymupdf>=1.24",
    "pyyaml>=6.0",
    "faker>=28.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    # Keep in the same minor as .pre-commit-config.yaml's ruff-pre-commit rev —
    # the formatter's output changes between minors and CI enforces --check.
    "ruff>=0.15,<0.16",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "pre-commit>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort import ordering
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear (likely bugs)
    "T20",  # no print statements
    "BLE",  # no blind excepts
]

[tool.ruff.lint.per-file-ignores]
# generate_ehr.py is a CLI script — printing its result is its job
"app/data/generate_ehr.py" = ["T201"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
files = ["app", "tests"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

# LangChain/LangGraph and friends ship incomplete stubs
[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_ollama.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "pymupdf.*",
    "faker.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.report]
# Single source of truth for the coverage floor — CI runs `pytest --cov` and
# picks this up, so raising the gate (see #9) is a one-line change here, not
# an edit to the workflow. Baseline is ~36%; ratchet up as tests land.
fail_under = 35
