[project]
name = "protocol-screener"
version = "0.1.0"
description = "Multi-agent clinical trial protocol screener (LangGraph + FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite>=0.20",
    "langchain-ollama>=0.2",
    "langchain-anthropic>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pymupdf>=1.24",
    "pyyaml>=6.0",
    "faker>=28.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Production checkpointer target (CHECKPOINT_BACKEND=postgres). Kept out of the
# base install so single-node / sqlite deployments don't pull psycopg.
postgres = [
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    # Keep in the same minor as .pre-commit-config.yaml's ruff-pre-commit rev —
    # the formatter's output changes between minors and CI enforces --check.
    "ruff>=0.15,<0.16",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "pre-commit>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort import ordering
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear (likely bugs)
    "T20",  # no print statements
    "BLE",  # no blind excepts
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
files = ["app", "tests"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

# LangChain/LangGraph and friends ship incomplete stubs
[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_ollama.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "pymupdf.*",
    "faker.*",
    # Optional production-only backend (installed via the `postgres` extra).
    "psycopg.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# The eval harness is a nightly/on-demand tool, deliberately outside the typed
# CI gate (it is not in `files` above). The scoring unit test imports it, so
# tell mypy to resolve but not type-check it rather than fail the followed import.
[[tool.mypy.overrides]]
module = "evals.*"
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# `auto` lets async test functions run without a per-test @pytest.mark.asyncio.
asyncio_mode = "auto"

[tool.coverage.run]
# The seeded synthetic-EHR generator is a one-off data script, not part of the
# request path — exercising it would test Faker, not our logic (#9).
omit = ["app/data/generate_ehr.py"]

[tool.coverage.report]
# Single source of truth for the coverage floor — CI runs `pytest --cov` and
# picks this up, so changing the gate is a one-line edit here, not a workflow
# change. Raised to 80 in #9 once the integration suite landed.
fail_under = 80
